test/samples/invalid/tc/global_wrong_type.maruir
var a: u256 = 1_i256